trunk/Archive2/e7/3be962b91be1af/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:12:2: error: default initialization of an object of const type 'const struct default_t' requires a user-provided default constructor
}default_;
 ^
1 error generated.
